package nl.saxion.shared.commands.message;

public class PrivateMessageCommand {
}
